feat: add swagger documentation update
