# docs/swagger.json
@@ -12,7 +12,7 @@
     },
     "basePath": "/api/v1",
     "paths": {
-        "/auth/find": {
+        "/auth/all": {
             "get": {
                 "description": "Get the list of all users",
                 "consumes": [
@@ -26,22 +26,57 @@
                     {
                         "type": "integer",
                         "format": "page",
-                        "description": "page",
+                        "description": "page number",
                         "name": "page",
                         "in": "query"
                     },
                     {
                         "type": "integer",
                         "format": "size",
-                        "description": "size",
+                        "description": "number of elements per page",
                         "name": "size",
                         "in": "query"
                     },
                     {
                         "type": "integer",
                         "format": "orderBy",
-                        "description": "order by",
+                        "description": "filter name",
                         "name": "orderBy",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.UsersList"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/httpErrors.RestError"
+                        }
+                    }
+                }
+            }
+        },
+        "/auth/find": {
+            "get": {
+                "description": "Find user by name",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Find by name",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "format": "username",
+                        "description": "username",
+                        "name": "name",
                         "in": "query"
                     }
                 ],
@@ -365,21 +400,21 @@
                     {
                         "type": "integer",
                         "format": "page",
-                        "description": "page",
+                        "description": "page number",
                         "name": "page",
                         "in": "query"
                     },
                     {
                         "type": "integer",
                         "format": "size",
-                        "description": "size",
+                        "description": "number of elements per page",
                         "name": "size",
                         "in": "query"
                     },
                     {
                         "type": "integer",
                         "format": "orderBy",
-                        "description": "order by",
+                        "description": "filter name",
                         "name": "orderBy",
                         "in": "query"
                     }
@@ -515,21 +550,21 @@
                     {
                         "type": "integer",
                         "format": "page",
-                        "description": "page",
+                        "description": "page number",
                         "name": "page",
                         "in": "query"
                     },
                     {
                         "type": "integer",
                         "format": "size",
-                        "description": "size",
+                        "description": "number of elements per page",
                         "name": "size",
                         "in": "query"
                     },
                     {
                         "type": "integer",
                         "format": "orderBy",
-                        "description": "order by",
+                        "description": "filter name",
                         "name": "orderBy",
                         "in": "query"
                     }
@@ -578,21 +613,21 @@
                     {
                         "type": "integer",
                         "format": "page",
-                        "description": "page",
+                        "description": "page number",
                         "name": "page",
                         "in": "query"
                     },
                     {
                         "type": "integer",
                         "format": "size",
-                        "description": "size",
+                        "description": "number of elements per page",
                         "name": "size",
                         "in": "query"
                     },
                     {
                         "type": "integer",
                         "format": "orderBy",
-                        "description": "order by",
+                        "description": "filter name",
                         "name": "orderBy",
                         "in": "query"
                     }
